--- a/BodyCareProducts/src/main/webapp/check-out.html
+++ b/BodyCareProducts/src/main/webapp/check-out.html
@@ -243,7 +243,9 @@
                             </div>
                         -->
                         <div class="place-order">
+                            <div style="display: flex;justify-content: center;">
                             <h4> Your Order</h4>
+                        </div>
                             <div class="order-total">
                                 <ul class="order-table">
                                     <li>Product <span>Total</span></li>
@@ -253,7 +255,7 @@
                                     <li class="fw-normal">Subtotal <span>$240.00</span></li>
                                     <li class="total-price">Total <span>$240.00</span></li>
                                 </ul>
-                                <div class="payment-check">
+                                <!-- <div class="payment-check">
                                     <div class="pc-item">
                                         <label for="pc-check">
                                             Cheque Payment
@@ -268,7 +270,7 @@
                                             <span class="checkmark"></span>
                                         </label>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="order-btn">
                                     <button type="submit" class="site-btn place-btn">Place Order</button>
                                 </div>
