--- a/BodyCareProducts/src/main/webapp/shopping-cart.html
+++ b/BodyCareProducts/src/main/webapp/shopping-cart.html
@@ -177,82 +177,87 @@
     <!-- Breadcrumb Section Begin -->
 
     <!-- Shopping Cart Section Begin -->
-    <div class="container-fluid" style="background-image: url(img/background_img.jpg); background-repeat: no-repeat; background-size: cover;">
-        <section class="shopping-cart spad" >
-        <div class="container">
-            <div class="row px-2 py-3" style="background-color: #f5f5f5; border-radius: 15px;">
-                <div class="col-lg-12">
-                    <div class="cart-table">
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th>Image</th>
-                                    <th class="p-name">Product Name</th>
-                                    <th>Price</th>
-                                    <th>Quantity</th>
-                                    <th>Total</th>
-                                    <th><i class="ti-close"></i></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td class="cart-pic first-row"><img src="img/cart-page/product-1.jpg" alt=""></td>
-                                    <td class="cart-title first-row">
-                                        <h5>Pure Pineapple</h5>
-                                    </td>
-                                    <td class="p-price first-row">$60.00</td>
-                                    <td class="qua-col first-row">
-                                        <div class="quantity">
-                                            <div class="pro-qty">
-                                                <input type="text" value="1">
+    <div class="container-fluid"
+        style="background-image: url(img/background_img.jpg); background-repeat: no-repeat; background-size: cover;">
+        <section class="shopping-cart spad">
+            <div class="container">
+                <div class="row px-2 py-3" style="background-color: #f5f5f5; border-radius: 15px;">
+                    <div class="col-lg-12">
+                        <div class="cart-table">
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Image</th>
+                                        <th class="p-name">Product Name</th>
+                                        <th>Price</th>
+                                        <th>Quantity</th>
+                                        <th>Total</th>
+                                        <th><i class="ti-close"></i></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td class="cart-pic first-row"><img src="img/cart-page/product-1.jpg" alt=""
+                                                style="border-radius: 15px;"></td>
+                                        <td class="cart-title first-row">
+                                            <h5>Pure Pineapple</h5>
+                                        </td>
+                                        <td class="p-price first-row">$60.00</td>
+                                        <td class="qua-col first-row">
+                                            <div class="quantity">
+                                                <div class="pro-qty">
+                                                    <input type="text" value="1">
+                                                </div>
                                             </div>
-                                        </div>
-                                    </td>
-                                    <td class="total-price first-row">$60.00</td>
-                                    <td class="close-td first-row"><i class="ti-close"></i></td>
-                                </tr>
-                                <tr>
-                                    <td class="cart-pic"><img src="img/cart-page/product-2.jpg" alt=""></td>
-                                    <td class="cart-title">
-                                        <h5>American lobster</h5>
-                                    </td>
-                                    <td class="p-price">$60.00</td>
-                                    <td class="qua-col">
-                                        <div class="quantity">
-                                            <div class="pro-qty">
-                                                <input type="text" value="1">
+                                        </td>
+                                        <td class="total-price first-row">$60.00</td>
+                                        <td class="close-td first-row"><i class="ti-close"></i></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="cart-pic"><img src="img/cart-page/product-2.jpg" alt=""
+                                                style="border-radius: 15px;"></td>
+                                        <td class="cart-title">
+                                            <h5>American lobster</h5>
+                                        </td>
+                                        <td class="p-price">$60.00</td>
+                                        <td class="qua-col">
+                                            <div class="quantity">
+                                                <div class="pro-qty">
+                                                    <input type="text" value="1">
+                                                </div>
                                             </div>
-                                        </div>
-                                    </td>
-                                    <td class="total-price">$60.00</td>
-                                    <td class="close-td"><i class="ti-close"></i></td>
-                                </tr>
-                                <tr>
-                                    <td class="cart-pic"><img src="img/cart-page/product-3.jpg" alt=""></td>
-                                    <td class="cart-title">
-                                        <h5>Guangzhou sweater</h5>
-                                    </td>
-                                    <td class="p-price">$60.00</td>
-                                    <td class="qua-col">
-                                        <div class="quantity">
-                                            <div class="pro-qty">
-                                                <input type="text" value="1">
+                                        </td>
+                                        <td class="total-price">$60.00</td>
+                                        <td class="close-td"><i class="ti-close"></i></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="cart-pic"><img src="img/cart-page/product-3.jpg" alt=""
+                                                style="border-radius: 15px;"></td>
+                                        <td class="cart-title">
+                                            <h5>Guangzhou sweater</h5>
+                                        </td>
+                                        <td class="p-price">$60.00</td>
+                                        <td class="qua-col">
+                                            <div class="quantity">
+                                                <div class="pro-qty">
+                                                    <input type="text" value="1">
+                                                </div>
                                             </div>
-                                        </div>
-                                    </td>
-                                    <td class="total-price">$60.00</td>
-                                    <td class="close-td"><i class="ti-close"></i></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <div class="cart-buttons" >
-                                <a href="#" class="primary-btn continue-shop" style="border-radius: 15px;">Continue shopping</a>
-                                <a href="#" class="primary-btn up-cart" style="border-radius: 15px;">Update cart</a>
-                            </div>
-                            <!--
+                                        </td>
+                                        <td class="total-price">$60.00</td>
+                                        <td class="close-td"><i class="ti-close"></i></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <div class="cart-buttons">
+                                    <a href="#" class="primary-btn continue-shop" style="border-radius: 15px;">Continue
+                                        shopping</a>
+                                    <a href="#" class="primary-btn up-cart" style="border-radius: 15px;">Update cart</a>
+                                </div>
+                                <!--
                             <div class="discount-coupon">
                                 <h6>Discount Codes</h6>
                                 <form action="#" class="coupon-form">
@@ -261,21 +266,22 @@
                                 </form>
                             </div>
                         </div>-->
-                        </div>
-                        <div class="col-lg-4 offset-lg-4">
-                            <div class="proceed-checkout">
-                                <ul style="border-radius: 15px 15px 0px 0px;">
-                                    <li class="subtotal">Subtotal <span>$240.00</span></li>
-                                    <li class="cart-total">Total <span>$240.00</span></li>
-                                </ul>
-                                <a href="#" class="proceed-btn" style="border-radius: 0px 0px 15px 15px;">PROCEED TO CHECK OUT</a>
+                            </div>
+                            <div class="col-lg-4 offset-lg-4">
+                                <div class="proceed-checkout">
+                                    <ul style="border-radius: 15px 15px 0px 0px;">
+                                        <li class="subtotal">Subtotal <span>$240.00</span></li>
+                                        <li class="cart-total">Total <span>$240.00</span></li>
+                                    </ul>
+                                    <a href="#" class="proceed-btn" style="border-radius: 0px 0px 15px 15px;">PROCEED TO
+                                        CHECK OUT</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        </div>
+    </div>
     </section>
     </div>
     <!-- Shopping Cart Section End -->
@@ -378,8 +384,11 @@
                     <div class="col-lg-12">
                         <div class="copyright-text">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;
+                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This
+                            template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
+                                href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </div>
                         <div class="payment-pic">
                             <img src="img/payment-method.png" alt="">
