edit navbar in all pages

--- a/BodyCareProducts/src/main/webapp/login.html
+++ b/BodyCareProducts/src/main/webapp/login.html
@@ -29,10 +29,11 @@
     <link rel="stylesheet" href="css/nice-select.css" type="text/css">
     <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    
      <!-- Bootstrap5 -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
+     <link rel="stylesheet" href="css/style.css" type="text/css">
+    </head>
 
 <body>
     <!-- Page Preloder -->
@@ -53,7 +54,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-7 col-md-7">
+                    <div class="col-lg-5 col-md-5">
                         <div class="advanced-search" >
                             <!-- <button type="button" class="category-btn">All Categories</button> -->
                             <form action="#" class="input-group">
@@ -62,7 +63,7 @@
                             </form>
                         </div>
                     </div>
-                    <div class="col-lg-3 text-right col-md-3">
+                    <div class="col-lg-2 text-right col-md-2">
                         <ul class="nav-right">
                             <li class="heart-icon"><a href="#">
                                     <i class="icon_heart_alt"></i>
@@ -117,24 +118,26 @@
                             <li class="cart-price">$150.00</li>
                         </ul>
                     </div>
+
+                    <div class="col-lg-3 col-md-3">
+                        <div>
+                            <button class="btn primary-btn sign-in">Sign in</button>
+                            <button class="btn primary-btn sign-in">Sign up</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="nav-item">
+        <div class="nav-item ">
             <div class="container">
                 <div class="nav-depart">
                     <div class="depart-btn">
                         <i class="ti-menu"></i>
-                        <span>All departments</span>
+                        <span>All Categories</span>
                         <ul class="depart-hover">
-                            <li class="active"><a href="#">Women’s Clothing</a></li>
-                            <li><a href="#">Men’s Clothing</a></li>
-                            <li><a href="#">Underwear</a></li>
-                            <li><a href="#">Kid's Clothing</a></li>
-                            <li><a href="#">Brand Fashion</a></li>
-                            <li><a href="#">Accessories/Shoes</a></li>
-                            <li><a href="#">Luxury Brands</a></li>
-                            <li><a href="#">Brand Outdoor Apparel</a></li>
+                            <li class="active"><a href="#">Bath & Shower</a></li>
+                            <li><a href="#">Fragrance</a></li>
+                            <li><a href="#">Candles</a></li>
                         </ul>
                     </div>
                 </div>
@@ -142,15 +145,21 @@
                     <ul>
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./shop.html">Shop</a></li>
-                        <li><a href="#">Collection</a>
-                            <ul class="dropdown">
-                                <li><a href="#">Men's</a></li>
-                                <li><a href="#">Women's</a></li>
-                                <li><a href="#">Kid's</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="./blog.html">Blog</a></li>
+                        <!--
+                            <li><a href="#">Collection</a>
+                                <ul class="dropdown">
+                                    <li><a href="#">Men's</a></li>
+                                    <li><a href="#">Women's</a></li>
+                                    <li><a href="#">Kid's</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="./blog.html">Blog</a></li>
+                        -->
                         <li><a href="./contact.html">Contact</a></li>
+                        <li><a href="./contact.html"> Cart</a></li>
+                        <li><a href="./contact.html">Wishlist</a></li>
+                        <li><a href="./contact.html">Check-out</a></li>
+                        <!--
                         <li><a href="#">Pages</a>
                             <ul class="dropdown">
                                 <li><a href="./blog-details.html">Blog Details</a></li>
@@ -161,6 +170,7 @@
                                 <li><a href="./login.html">Login</a></li>
                             </ul>
                         </li>
+                        -->
                     </ul>
                 </nav>
                 <div id="mobile-menu-wrap"></div>
@@ -191,14 +201,14 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6 offset-lg-3">
-                            <div class="card px-3 py-3"
-                                style="color:white;width: 35rem;border-radius: 15px;background-color: #ffffffe0;">
+                            <div class="card px-4 py-4"
+                                style="color:white;width: 35rem;border-radius: 15px;background-color: #f5f5f5;">
                                 <div class="card-body">
                                     <div class="login-form">
                                         <h2>Login</h2>
                                         <form action="#">
                                             <div class="group-input">
-                                                <label for="username">Username or email address *</label>
+                                                <label for="username">Email address *</label>
                                                 <input type="text" id="username" class="defaultBorders">
                                             </div>
                                             <div class="group-input">
