--- a/BodyCareProducts/src/main/webapp/contact.html
+++ b/BodyCareProducts/src/main/webapp/contact.html
@@ -9,19 +9,31 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fashi | Template</title>
 
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+   <!-- Google Font -->
+   <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E" />
+   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Roboto:wght@100&display=swap"
+       rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Roboto:wght@100&display=swap"
+       rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Karla:400,700%7CMartel:400,700" rel="stylesheet">
 
-    <!-- Css Styles -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/themify-icons.css" type="text/css">
-    <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/nice-select.css" type="text/css">
-    <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
-    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+   <!-- Css Styles -->
+   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+   <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
+   <link rel="stylesheet" href="css/themify-icons.css" type="text/css">
+   <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
+   <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
+   <link rel="stylesheet" href="css/nice-select.css" type="text/css">
+   <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
+   <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
+
+   <!-- Bootstrap5 -->
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+   <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
 <body>
@@ -42,16 +54,16 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-7 col-md-7">
-                        <div class="advanced-search">
-                            <button type="button" class="category-btn">All Categories</button>
+                    <div class="col-lg-5 col-md-5">
+                        <div class="advanced-search" >
+                            <!-- <button type="button" class="category-btn">All Categories</button> -->
                             <form action="#" class="input-group">
                                 <input type="text" placeholder="What do you need?">
                                 <button type="button"><i class="ti-search"></i></button>
                             </form>
                         </div>
                     </div>
-                    <div class="col-lg-3 text-right col-md-3">
+                    <div class="col-lg-2 text-right col-md-2">
                         <ul class="nav-right">
                             <li class="heart-icon"><a href="#">
                                     <i class="icon_heart_alt"></i>
@@ -106,24 +118,26 @@
                             <li class="cart-price">$150.00</li>
                         </ul>
                     </div>
+
+                    <div class="col-lg-3 col-md-3">
+                        <div>
+                            <button class="btn primary-btn sign-in">Sign in</button>
+                            <button class="btn primary-btn sign-in">Sign up</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="nav-item">
+        <div class="nav-item ">
             <div class="container">
                 <div class="nav-depart">
                     <div class="depart-btn">
                         <i class="ti-menu"></i>
-                        <span>All departments</span>
+                        <span>All Categories</span>
                         <ul class="depart-hover">
-                            <li class="active"><a href="#">Women’s Clothing</a></li>
-                            <li><a href="#">Men’s Clothing</a></li>
-                            <li><a href="#">Underwear</a></li>
-                            <li><a href="#">Kid's Clothing</a></li>
-                            <li><a href="#">Brand Fashion</a></li>
-                            <li><a href="#">Accessories/Shoes</a></li>
-                            <li><a href="#">Luxury Brands</a></li>
-                            <li><a href="#">Brand Outdoor Apparel</a></li>
+                            <li class="active"><a href="#">Bath & Shower</a></li>
+                            <li><a href="#">Fragrance</a></li>
+                            <li><a href="#">Candles</a></li>
                         </ul>
                     </div>
                 </div>
@@ -131,15 +145,21 @@
                     <ul>
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./shop.html">Shop</a></li>
-                        <li><a href="#">Collection</a>
-                            <ul class="dropdown">
-                                <li><a href="#">Men's</a></li>
-                                <li><a href="#">Women's</a></li>
-                                <li><a href="#">Kid's</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="./blog.html">Blog</a></li>
-                        <li class="active"><a href="./contact.html">Contact</a></li>
+                        <!--
+                            <li><a href="#">Collection</a>
+                                <ul class="dropdown">
+                                    <li><a href="#">Men's</a></li>
+                                    <li><a href="#">Women's</a></li>
+                                    <li><a href="#">Kid's</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="./blog.html">Blog</a></li>
+                        -->
+                        <li><a href="./contact.html">Contact</a></li>
+                        <li><a href="./contact.html"> Cart</a></li>
+                        <li><a href="./contact.html">Wishlist</a></li>
+                        <li><a href="./contact.html">Check-out</a></li>
+                        <!--
                         <li><a href="#">Pages</a>
                             <ul class="dropdown">
                                 <li><a href="./blog-details.html">Blog Details</a></li>
@@ -150,6 +170,7 @@
                                 <li><a href="./login.html">Login</a></li>
                             </ul>
                         </li>
+                        -->
                     </ul>
                 </nav>
                 <div id="mobile-menu-wrap"></div>
