--- a/BodyCareProducts/src/main/webapp/user-history-admin.html
+++ b/BodyCareProducts/src/main/webapp/user-history-admin.html
@@ -210,10 +210,10 @@
                         <br>
                         <ul class="my-account">
                             <li>
-                                <a href="order-history.html" class="active">User Details</a>
+                                <a href="order-history-admin.html" class="active">User Details</a>
                             </li>
                             <li>
-                                <a href="add-user.html" >Add a user</a>
+                                <a href="add-user-admin.html" >Add a user</a>
                             </li>
                         </ul>
                 
@@ -227,6 +227,7 @@
                                         <th>User Name</th>
                                         <th>Email</th>
                                         <th>Phone number</th>
+                                        <th>Address</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -234,7 +235,7 @@
                                         <td><a href="#">User 1</a></td>
                                         <td>sondos@gmail.com</td>
                                         <td>01025840171</td>
-                                        
+                                        <td>cairo</td>
                                       </tr>
 
                                       <tr>
