--- a/BodyCareProducts/src/main/webapp/add-user-admin.html
+++ b/BodyCareProducts/src/main/webapp/add-user-admin.html
@@ -210,10 +210,10 @@
                         <br>
                         <ul class="my-account">
                             <li>
-                                <a href="user-history.html">User Details</a>
+                                <a href="user-history-admin.html">User Details</a>
                             </li>
                             <li>
-                                <a href="add-user.html"class="active" >Add a user</a>
+                                <a href="add-user-admin.html"class="active" >Add a user</a>
                             </li>
                         </ul>
                 
